# PythonInterpreter--Assignment2

./: CMakeLists.txt  README.md  environment.h  expression.h  interpreter.h  mypython  mypython.cpp  node.h  object.h  parser.h  printer.h  return.h  scanner.h  statement.h  test.sh  token.h  tokenizer.h  visitor.h
enc_temp_folder/da3366e374dead75f65ee77ab61126/: interpreter.h
testcases/: custom1.py  example.py  out11.txt  out12.txt
